# OS2mo-amqp-trigger-calculate-primary

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  RELEASE.md  amqp.py  docker-compose.yaml  main.py  mypy.ini  pyproject.toml  queries.graphql  schema.graphql
.reuse/: dep5
calculate_primary/: app.py  calculate_primary.py  common.py  config.py  default.py  depends.py  events.py  main.py  opus.py  sd.py
calculate_primary/autogenerated_graphql_client/: __init__.py  async_base_client.py  base_model.py  client.py  enums.py  exceptions.py  get_engagement_person.py  input_types.py  scalars.py
ramqp/ramqp/: __init__.py  amqp.py  amqpsystem.py  lowlevel.py
ramqp/tests/: common.py  test_metrics.py  test_register.py
tests/: conftest.py  test_callback.py  test_metrics.py  test_primary.py  test_sd.py
