# SPDX-FileCopyrightText: 2019-2020 Magenta ApS
# SPDX-License-Identifier: MPL-2.0
[tool.poetry]
name = "calculate-primary"
version = "0.0.0"  # versioning handled by conventional commits
description = "OS2mo AMQP Trigger for recalculating primary"
authors = ["Magenta <info@magenta.dk>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/os2mo-triggers/os2mo-amqp-trigger-calculate-primary"
keywords = ["os2mo", "amqp"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.1"
prometheus-client = "0.13.1"
ramqp = "^1.3.1"
dipex = "^2.28.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.942"
pre-commit = "^2.18.1"
pytest = "6.2.5"
ra-utils = "^1.0.0"
reorder-python-imports = "^3.0.1"

[tool.poetry.group.dev.dependencies]
pytest-split = "^0.8.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode="auto"

[tool.mypy]
python_version = 3.8
warn_return_any = "True"
warn_unused_configs = "True"
check_untyped_defs = "True"
disallow_untyped_defs = "True"
plugins = "pydantic.mypy"

[tool.flake8]
max-line-length = 88
exclude = [
".git", "__pycache__", ".mypy_cache", ".pytest_cache", ".venv", ".gitlab"
]
