# SPDX-FileCopyrightText: 2019-2020 Magenta ApS
# SPDX-License-Identifier: MPL-2.0
[tool.poetry]
name = "calculate-primary"
version = "0.0.0"  # versioning handled by conventional commits
description = "OS2mo AMQP Trigger for recalculating primary"
authors = ["Magenta <info@magenta.dk>"]
license = "MPL-2.0"
readme = "README.md"
homepage = "https://magenta.dk/"
repository = "https://git.magenta.dk/rammearkitektur/os2mo-triggers/os2mo-amqp-trigger-calculate-primary"
keywords = ["os2mo", "amqp"]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.0.1"
os2mo-data-import = "^6.1.0"
ra-utils = "^1.11.10"
tenacity = "^8.3.0"
pydantic = "^1.10.17"
fastramqpi = "^9.1.0"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"

[tool.poetry.group.test.dependencies]
pytest-split = "^0.8.0"
pytest-cov = "^4.0.0"
hypothesis = "^6.103.1"
ra-utils = "^1.0.0"
pytest = "^7.4.3"

[tool.poetry.group.pre-commit.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.5.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode="auto"

[tool.mypy]
python_version = 3.8
warn_return_any = "True"
warn_unused_configs = "True"
check_untyped_defs = "True"
disallow_untyped_defs = "True"
plugins = "pydantic.mypy"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = true
